<resources>
    <string name="app_name">Vet Clinic</string>
    <string name="text_log_in_account">Вход в аккаунт</string>
    <string name="hint_phone">Телефон</string>
    <string name="hint_password">Пароль</string>
    <string name="btn_log_in">Войти</string>
    <string name="text_register">Нет аккаунта?</string>
    <string name="btn_register">Зарегистрируйся</string>
    <string name="text_appointment">Запись</string>
    <string name="btn_profile">Профиль</string>
    <string name="btn_my_appointment">Мои записи</string>
    <string name="btn_back">Назад</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>