<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btn_appointment"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:contentDescription="@string/text_appointment"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/symbol" />
            <TextView
                android:id="@+id/text_btn_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_appointment"
                android:layout_gravity="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btn_profile"
                android:layout_width="wrap_content"
                android:background="@color/white"
                android:contentDescription="@string/btn_profile"
                android:onClick="GoLog"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/profile"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/text_btn_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_profile"
                android:layout_gravity="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btn_my_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:contentDescription="@string/text_appointment"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/paper" />
            <TextView
                android:id="@+id/text_btn_my_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_my_appointment"
                android:layout_gravity="center"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/framelayout_for_fragments"
        android:layout_width="match_parent"
        android:layout_height="627dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="580dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_my_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>